launch multiplayer screen update

--- a/app/src/main/res/layout/fragment_launch_multiplayer.xml
+++ b/app/src/main/res/layout/fragment_launch_multiplayer.xml
@@ -1,11 +1,24 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".LaunchMultiplayerFragment">
+
+    <TextView
+        android:id="@+id/launch_multi_title"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="8dp"
+        android:text="Bluetooth"
+        android:textSize="32sp"
+        android:textStyle="bold"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <Button
         android:id="@+id/hostSession"
@@ -13,38 +26,124 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
-        android:layout_marginBottom="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginBottom="16dp"
         android:text="Host a Session"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.537"
+        app:layout_constraintBottom_toTopOf="@+id/host_descrip"
+        app:layout_constraintEnd_toStartOf="@+id/launch_multi_vert_guideline1"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.254" />
+        app:layout_constraintTop_toTopOf="@+id/launch_multi_horiz_guideline1"
+        app:layout_constraintVertical_bias="0.0" />
 
     <Button
         android:id="@+id/joinSession"
         android:layout_width="150dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="32dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginBottom="16dp"
         android:text="Join a Session"
-        app:layout_constraintEnd_toEndOf="@+id/hostSession"
-        app:layout_constraintStart_toStartOf="@+id/hostSession"
-        app:layout_constraintTop_toBottomOf="@+id/hostSession" />
+        app:layout_constraintBottom_toTopOf="@+id/join_descrip"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="@+id/launch_multi_vert_guideline1"
+        app:layout_constraintTop_toTopOf="@+id/launch_multi_horiz_guideline1"
+        app:layout_constraintVertical_bias="0.0" />
 
     <ListView
         android:id="@+id/devicesListView"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_height="0dp"
         android:layout_alignRight="@+id/joinSession"
         android:layout_marginStart="16dp"
-        android:layout_marginTop="32dp"
+        android:layout_marginTop="8dp"
         android:layout_marginEnd="16dp"
         android:layout_marginBottom="32dp"
         android:choiceMode="singleChoice"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/launch_multi_horiz_guideline2" />
+
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/launch_multi_vert_guideline1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintGuide_percent="0.5"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <View
+        android:id="@+id/launch_multi_vert_line_1"
+        android:layout_width="2dp"
+        android:layout_height="0dp"
+        android:background="@android:color/black"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintBottom_toTopOf="@id/launch_multi_horiz_guideline2"
+        app:layout_constraintStart_toEndOf="@id/launch_multi_vert_guideline1"
+        app:layout_constraintTop_toBottomOf="@id/launch_multi_horiz_guideline1" />
+
+    <View
+        android:id="@+id/launch_multi_horiz_line1"
+        android:layout_width="0dp"
+        android:layout_height="2dp"
+        android:background="@android:color/black"
+        app:layout_constraintBottom_toTopOf="@+id/launch_multi_horiz_guideline1"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
+
+    <View
+        android:id="@+id/launch_multi_horiz_line2"
+        android:layout_width="0dp"
+        android:layout_height="2dp"
+        android:background="@android:color/black"
+        app:layout_constraintBottom_toTopOf="@+id/launch_multi_horiz_guideline2"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
+
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/launch_multi_horiz_guideline1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintGuide_percent="0.2"
+        app:layout_constraintStart_toStartOf="parent" />
+
+    <TextView
+        android:id="@+id/host_descrip"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="32dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="32dp"
+        android:layout_marginBottom="8dp"
+        android:text="@string/bluetooth_host_descrip"
+        app:layout_constraintBottom_toTopOf="@+id/launch_multi_horiz_guideline2"
+        app:layout_constraintEnd_toStartOf="@+id/launch_multi_vert_guideline1"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/hostSession" />
+
+    <TextView
+        android:id="@+id/join_descrip"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="32dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="32dp"
+        android:layout_marginBottom="8dp"
+        android:text="@string/bluetooth_join_descrip"
+        app:layout_constraintBottom_toTopOf="@+id/launch_multi_horiz_guideline2"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="@+id/launch_multi_vert_guideline1"
         app:layout_constraintTop_toBottomOf="@+id/joinSession" />
+
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/launch_multi_horiz_guideline2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        app:layout_constraintGuide_percent="0.65" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
