--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -52,6 +52,9 @@
             android:name="score"
             app:argType="integer"
             android:defaultValue="0" />
+        <action
+            android:id="@+id/action_questionFragment_to_endMultiplayerQuizFragment"
+            app:destination="@+id/endMultiplayerQuizFragment" />
     </fragment>
     <fragment
         android:id="@+id/launchMultiplayerFragment"
