--- a/app/src/main/res/layout/fragment_question.xml
+++ b/app/src/main/res/layout/fragment_question.xml
@@ -34,7 +34,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="4dp"
         android:layout_marginEnd="8dp"
-        android:text="Question 0 of 5  |"
+        android:text="Question 0 of X  |"
         android:textStyle="bold"
         app:layout_constraintEnd_toStartOf="@+id/scoreCountView"
         app:layout_constraintTop_toBottomOf="@+id/quizProgressBarBackground" />
