--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -4,11 +4,11 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/nav_graph"
     app:startDestination="@id/launchQuizFragment">
-    <fragment
+    <!-- <fragment
         android:id="@+id/settingsFragment"
         android:name="com.flamingo.wikiquiz.SettingsFragment"
         android:label="fragment_settings"
-        tools:layout="@layout/fragment_settings" />
+        tools:layout="@layout/fragment_settings" /> -->
     <fragment
         android:id="@+id/StudyAddFragment"
         android:name="com.flamingo.wikiquiz.StudyAddFragment"
