--- a/app/src/main/res/layout/fragment_study_add.xml
+++ b/app/src/main/res/layout/fragment_study_add.xml
@@ -17,6 +17,22 @@
         app:layout_constraintStart_toStartOf="@+id/database_recyclerview"
         app:layout_constraintTop_toBottomOf="@id/review_title" />
 
+
+    <TextView
+        android:id="@+id/reviewDescrip"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_marginStart="32dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="32dp"
+        android:layout_marginBottom="8dp"
+        android:text="@string/review_screen_descrip"
+        app:layout_constraintBottom_toTopOf="@+id/display_header"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/review_title" />
+
+
     <View
         android:id="@+id/db_display_horizLine1"
         android:layout_width="0dp"
@@ -62,7 +78,7 @@
         android:layout_height="0dp"
         android:layout_marginStart="16dp"
         android:layout_marginEnd="16dp"
-        android:layout_marginBottom="64dp"
+        android:layout_marginBottom="32dp"
         android:background="@drawable/db_display_item_border"
         android:scrollbars="vertical"
         app:layout_constraintBottom_toBottomOf="parent"
