--- a/app/src/main/res/menu/nav_menu.xml
+++ b/app/src/main/res/menu/nav_menu.xml
@@ -4,7 +4,7 @@
     <item
         android:id="@+id/statsFragment"
         android:icon="@drawable/ic_trophy_outline_24px"
-        android:title="Stats" />
+        android:title="Scores" />
     <item
         android:id="@+id/launchQuizFragment"
         android:icon="@drawable/ic_play_24px"
